--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "cross-env": "^7.0.3",
     "postcss": "^8.4.18",
     "postcss-nested": "^6.0.0",
+    "postcss-nesting": "^10.2.0",
     "tailwindcss": "^3.2.1",
     "vite": "^3.1.8",
     "vite-plugin-live-reload": "^3.0.1"
+  },
+  "dependencies": {
+    "sass": "^1.56.1",
+    "swiper": "^8.4.5"
   }
 }
